strings para error y boton

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Laboratorio_3</string>
+    <string name="tarea_vacia">Error: no puedes agregar una tarea vacia</string>
+    <string name="agregar_tarea">Agregar tarea</string>
 </resources>
